[tool.poetry]
name = "snyk-combined-sbom"
version = "0.1.0"
description = ""
authors = ["Troy Havelock <troy.havelock@snyk.io>"]
readme = "README.md"
packages = [{include = "snyk_combined_sbom"}]

[tool.poetry.scripts]
snyk-combined-sbom = "snyk_combined_sbom.main:run"

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.9.0"
requests = "^2.31.0"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
